mdapi/Custom/objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dishwasher</fullName>
                </value>
                <value>
                    <fullName>Dryer</fullName>
                </value>
                <value>
                    <fullName>Elect. Stove</fullName>
                </value>
                <value>
                    <fullName>Fridge</fullName>
                </value>
                <value>
                    <fullName>Gas Stove</fullName>
                </value>
                <value>
                    <fullName>Microwave</fullName>
                </value>
                <value>
                    <fullName>Vent Hood</fullName>
                </value>
                <value>
                    <fullName>Washing</fullName>
                </value>
                <value>
                    <fullName>Elect. Oven</fullName>
                </value>
                <value>
                    <fullName>Gas Oven</fullName>
                </value>
                <value>
                    <fullName>Cabinets Repair</fullName>
                </value>
                <value>
                    <fullName>Microbial Growth</fullName>
                </value>
                <value>
                    <fullName>Shelves</fullName>
                </value>
                <value>
                    <fullName>Vanity</fullName>
                </value>
                <value>
                    <fullName>Cabinet Doors</fullName>
                </value>
                <value>
                    <fullName>Cabinet Drawers</fullName>
                </value>
                <value>
                    <fullName>Hinges</fullName>
                </value>
                <value>
                    <fullName>Cleanouts</fullName>
                </value>
                <value>
                    <fullName>Laundry Clogged</fullName>
                </value>
                <value>
                    <fullName>Main Line Clogged</fullName>
                </value>
                <value>
                    <fullName>Multiple Showers Clogged</fullName>
                </value>
                <value>
                    <fullName>Sink Clogged</fullName>
                </value>
                <value>
                    <fullName>Toilet &amp; Tub Clogged</fullName>
                </value>
                <value>
                    <fullName>Sink Clogged by Garbage Disposal</fullName>
                </value>
                <value>
                    <fullName>Water Heater</fullName>
                </value>
                <value>
                    <fullName>Inadequate Venting</fullName>
                </value>
                <value>
                    <fullName>Leaking</fullName>
                </value>
                <value>
                    <fullName>Not Heating</fullName>
                </value>
                <value>
                    <fullName>Shut-off Valve</fullName>
                </value>
                <value>
                    <fullName>Supply Lines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Taken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <formula>hyperlink(&quot;http://invitationhomes.toa1.cs7.force.com/surveys/ServiceRequestSurvey?requestid=&quot;&amp; Id, &quot;Click here for details&quot;)</formula>
        <label>Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <formula>IF ( TEXT ( Worst_PA_Survey__c ) = &quot;5&quot;, IMAGE(&quot;/img/samples/rating1.gif&quot;, &quot;Yes&quot;, 12, 12), 
IF ( TEXT ( Worst_PA_Survey__c ) = &quot;4&quot;, IMAGE(&quot;/img/samples/rating2.gif&quot;, &quot;Yes&quot;, 12, 12), 
IF ( TEXT ( Worst_PA_Survey__c ) = &quot;3&quot;, IMAGE(&quot;/img/samples/rating3.gif&quot;, &quot;Yes&quot;, 12, 12), 
IF ( TEXT ( Worst_PA_Survey__c ) = &quot;2&quot;, IMAGE(&quot;/img/samples/rating4.gif&quot;, &quot;Yes&quot;, 12, 12), 
IF ( TEXT ( Worst_PA_Survey__c ) = &quot;1&quot;, IMAGE(&quot;/img/samples/rating5.gif&quot;, &quot;Yes&quot;, 12, 12), 
&quot;&quot; ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Comments__c</fullName>
        <label>Technician Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the group member working on the service order. This does not imply that this member has the ownership of service order record</description>
        <inlineHelpText>Name of the group member working on the service order. This does not imply that this member has the ownership of service order record</inlineHelpText>
        <label>Technician</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipName>Work_Orders_Tech</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tenant_Caused__c</fullName>
        <label>Tenant Caused</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Appointments__c</fullName>
        <label>Total Appointments</label>
        <summaryForeignKey>Appointment__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Service_Items__c</fullName>
        <label>Total # of Service Items</label>
        <summaryForeignKey>Service_Item__c.Service_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Vendor_Service_Items__c</fullName>
        <label>Total # of Vendor Service Items</label>
        <summaryFilterItems>
            <field>Service_Item__c.Assignment__c</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Item__c.Service_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_of_Open_Service_Items__c</fullName>
        <label>Total # of Open Service Items</label>
        <summaryFilterItems>
            <field>Service_Item__c.Service_Item_Status__c</field>
            <operation>equals</operation>
            <value>New, On Hold, Sent to Dispatch, Waiting Vendor Assignment, Sent to ETAdirect, In Progress, In Vendor Management</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Item__c.Service_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Description__c</fullName>
        <label>Work Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Order_ID__c</fullName>
        <displayFormat>VGWO-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Work Order ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type__c</fullName>
        <label>Work Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                    <default>true</default>
                    <label>Fixed</label>
                </value>
                <value>
                    <fullName>Time and Material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Worst_PA_Survey__c</fullName>
        <label>Worst PA Survey</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yardi_Property_Code__c</fullName>
        <formula>PortfolioProperty__r.Yardi_Property_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardi Property Code</label>
        <type>Text</type>
    </fields>
    <label>Service Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PortfolioProperty__c</columns>
        <columns>Yardi_Property_Code__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Overall_Priority__c</columns>
        <columns>Service_Request_Status__c</columns>
        <columns>Total_No_of_Service_Items__c</columns>
        <columns>Total_of_Open_Service_Items__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PHX_Service_Req_LAST_7DAYS</fullName>
        <columns>NAME</columns>
        <columns>PortfolioProperty__c</columns>
        <columns>Service_Request_Status__c</columns>
        <columns>Total_No_of_Service_Items__c</columns>
        <columns>Total_of_Open_Service_Items__c</columns>
        <columns>Total_No_of_Vendor_Service_Items__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>SReq_Open_Duration__c</columns>
        <columns>Completed_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Phoenix</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Jonathan Major</value>
        </filters>
        <label>PHX Service Req. - LAST 7 DAYS</label>
    </listViews>
    <listViews>
        <fullName>PHX_Service_Req_Yesterday_and_Today</fullName>
        <columns>NAME</columns>
        <columns>PortfolioProperty__c</columns>
        <columns>Service_Request_Status__c</columns>
        <columns>Total_No_of_Service_Items__c</columns>
        <columns>Total_of_Open_Service_Items__c</columns>
        <columns>Total_No_of_Vendor_Service_Items__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>SReq_Open_Duration__c</columns>
        <columns>Completed_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Phoenix</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY,TODAY</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notEqual</operation>
            <value>Jonathan Major</value>
        </filters>
        <label>PHX Service Req. - Yesterday and Today</label>
    </listViews>
    <listViews>
        <fullName>Phoenix_Service_Requests</fullName>
        <columns>NAME</columns>
        <columns>PortfolioProperty__c</columns>
        <columns>Service_Request_Status__c</columns>
        <columns>Total_No_of_Service_Items__c</columns>
        <columns>Total_of_Open_Service_Items__c</columns>
        <columns>Total_No_of_Vendor_Service_Items__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>SReq_Open_Duration__c</columns>
        <columns>Completed_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Phoenix</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Accepted,In Progress,On Hold,Ready,Ready awaiting PO</value>
        </filters>
        <label>Phoenix Service Requests</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000000}</displayFormat>
        <label>Service Request No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>